update git modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib_common"]
 	path = lib_common
-	url = git@github.com:lxl970211/lib_common.git
+	url = https://github.com/lxl970211/lib_common.git
     branch = master
